Overall content update to page

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<div class="col-md-8 col-md-offset-2 fh5co-section-heading text-center">
 								<h2 class="fh5co-lead to-animate">Explore the possibilities.</h2>
 								<p class="fh5co-sub to-animate"><b><i>the wash collective</i></b> isn't just for a fast, post-workout wipedown. This product opens the door to convenient cleanliness on so many more levels.</p>
-                                <h2 class="fh5co-lead to-animate">Take a look at just a few of the ways to put it to use...</h2>
+                                <h2 class="fh5co-lead to-animate">Take a look at just a few of the endless opportunities for use...</h2>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12">
 								<a href="#" class="fh5co-feature to-animate">
@@ -189,18 +189,18 @@
 					    <div class="container">
 					    	<div class="row">
 					    		<div class="col-md-8 col-md-offset-2 fh5co-section-heading text-center">
-									<h2 class="fh5co-lead to-animate">Better design</h2>
-									<p class="fh5co-sub to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<h2 class="fh5co-lead to-animate">What's In the Kit?</h2>
+									<p class="fh5co-sub to-animate">Great question my friends. We offer a standard starter kit that includes all of the items below. But fear not, sweaty comrades. You have the option to build your own kit, too!</p>
 								</div>
 					    		<div class="col-md-4 fh5co-text-wrap">
 					    			<div class="row text-center">
 						    			<div class="col-md-12 col-sm-6 col-xs-6 col-xxs-12 fh5co-text animate-object features-2-animate-3">
-						    				<span class="fh5co-icon"><i class="icon-screen-desktop"></i></span>
+						    				<span class="fh5co-icon"><img src="images/cleaning-wipes.jpg" alt=""></span>
 											<h4 class="fh5co-uppercase-sm">Cross platform support</h4>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 										</div>
 										<div class="col-md-12 col-sm-6 col-xs-6 col-xxs-12 fh5co-text animate-object features-2-animate-4">
-											<span class="fh5co-icon"><i class="icon-anchor"></i></span>
+											<span class="fh5co-icon"><img src="images/icon__comb.png" alt=""></span>
 											<h4 class="fh5co-uppercase-sm">Prototyping tools</h4>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 										</div>
@@ -210,12 +210,12 @@
 					    		<div class="col-md-4 col-md-push-4 fh5co-text-wrap">
 					    			<div class="row text-center">
 						    			<div class="col-md-12 col-sm-6 col-xs-6 col-xxs-12 fh5co-text animate-object features-2-animate-5">
-						    				<span class="fh5co-icon"><i class="icon-rocket"></i></span>
+						    				<span class="fh5co-icon"><img src="images/bottle.png" alt=""></span>
 											<h4 class="fh5co-uppercase-sm">Powerful design</h4>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 										</div>
 										<div class="col-md-12 col-sm-6 col-xs-6 col-xxs-12 fh5co-text animate-object features-2-animate-6">
-											<span class="fh5co-icon"><i class="icon-people"></i></span>
+											<span class="fh5co-icon"><img src="images/deodorant-stick.png" alt=""></span>
 											<h4 class="fh5co-uppercase-sm">User Collaboration</h4>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 										</div>
@@ -224,7 +224,7 @@
 					    		</div>
 					    		<div class="col-md-4 col-md-pull-4 fh5co-image animate-object features-2-animate-2">
 					    			<p class="text-center">
-					    			<img src="images/iphone_blank_2.png" class="" alt="Outline Free HTML5 Responsive Bootstrap Template">
+					    			<img src="images/iphone_blank_3.png" class="" alt="Outline Free HTML5 Responsive Bootstrap Template">
 					    			</p>
 					    		</div>
 					    		
