Fixed hover issue

--- a/index.html
+++ b/index.html
@@ -139,29 +139,29 @@
 								<p class="fh5co-sub to-animate"><b><i>the wash collective</i></b> isn't just for a fast, post-workout wipedown. This product opens the door to convenient cleanliness on so many more levels.</p>
                                 <h2 class="fh5co-lead to-animate">Take a look at just a few of the endless opportunities for use...</h2>
 							</div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+							<div class="col-md-3-top col-sm-6 col-xs-6 col-xxs-12">
 								<a href="#" class="fh5co-feature to-animate">
 									<span class="fh5co-feature-icon"><i class="icon-trophy"></i></span>
 									<h3 class="fh5co-feature-lead">Post workout</h3>
 									<p class="fh5co-feature-text">For those mid-afternoon workouts to get you through the workday.</p>
 								</a>
 							</div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+							<div class="col-md-3-top col-sm-6 col-xs-6 col-xxs-12">
 								<a href="#" class="fh5co-feature to-animate">
 									<span class="fh5co-feature-icon"><i class="icon-plane"></i></span>
 									<h3 class="fh5co-feature-lead">on the go</h3>
 									<p class="fh5co-feature-text">It can fit right in your purse, bag or car's glove box. Ready for wherever the next hour takes you.</p>
 								</a>
 							</div>
-							<div class="clearfix visible-sm-block"></div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+							<!--<div class="clearfix visible-sm-block"></div>-->
+							<div class="col-md-3-top col-sm-6 col-xs-6 col-xxs-12">
 								<a href="#" class="fh5co-feature to-animate">
 									<span class="fh5co-feature-icon"><i class="icon-area-chart"></i></span>
 									<h3 class="fh5co-feature-lead">Camping</h3>
 									<p class="fh5co-feature-text">Hiking to a beautiful mountaintop is great. Being stuck with a sweaty bod up there? That appeals to no one.</p>
 								</a>
 							</div>
-							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+							<div class="col-md-3-top col-sm-6 col-xs-6 col-xxs-12">
 								<a href="#" class="fh5co-feature to-animate">
 									<span class="fh5co-feature-icon"><i class="icon-unlock"></i></span>
 									<h3 class="fh5co-feature-lead">Possibilities are endless!</h3>
