--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 									<p class="fh5co-feature-text">It can fit right in your purse, bag or car's glove box. Ready for wherever the next hour takes you.</p>
 								</a>
 							</div>
-							<!--<div class="clearfix visible-sm-block"></div>-->
+							<div class="clearfix visible-sm-block"></div>
 							<div class="col-md-3-top col-sm-6 col-xs-6 col-xxs-12">
 								<a href="#" class="fh5co-feature to-animate">
 									<span class="fh5co-feature-icon"><i class="icon-area-chart"></i></span>
@@ -243,7 +243,7 @@
 
 								<div class="item">
 									<div class="col-md-3 col-sm-3 col-xs-4 col-xxs-12">
-						    			<figure class="fh5co-vcard"><img src="images/user.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive"></figure>
+						    			<figure class="fh5co-vcard"><img src="images/icon_user.png" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive"></figure>
 						    		</div>
 						    		<div class="col-md-9 col-sm-9 col-xs-8 col-xxs-12">
 						    			<blockquote>
@@ -255,7 +255,7 @@
 
 						    	<div class="item">
 									<div class="col-md-3 col-sm-3 col-xs-4 col-xxs-12">
-						    			<figure class="fh5co-vcard"><img src="images/user_2.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive"></figure>
+						    			<figure class="fh5co-vcard"><img src="images/icon_user.png" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive"></figure>
 						    		</div>
 						    		<div class="col-md-9 col-sm-9 col-xs-8 col-xxs-12">
 						    			<blockquote>
@@ -267,7 +267,7 @@
 
 						    	<div class="item">
 									<div class="col-md-3 col-sm-3 col-xs-4 col-xxs-12">
-						    			<figure class="fh5co-vcard"><img src="images/user_3.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive"></figure>
+						    			<figure class="fh5co-vcard"><img src="images/icon_user.png" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive"></figure>
 						    		</div>
 						    		<div class="col-md-9 col-sm-9 col-xs-8 col-xxs-12">
 						    			<blockquote>
