Added logo to images

--- a/index.html
+++ b/index.html
@@ -376,28 +376,29 @@
 								<h2 class="fh5co-lead animate-single pricing-animate-1">A kit for all types!</h2>
 								<p class="fh5co-sub animate-single pricing-animate-2">We offer three ways to purchase.</p>
 							</div>
-							<div id="product-regularkit" class="col-md-3-2 to-animate products-item">
-								<a href="#" class="fh5co-figure">
-									<span class="fh5co-price">$20<span>/month</span></span>
-									<h3 class="fh5co-figure-lead">Regular</h3>
-									<p class="fh5co-figure-text">For the avid exerciser. Restock on body & facial wipes every month.</p>
-									<div data-embed_type="product" data-shop="the-wash-collective.myshopify.com" data-product_name="Regular" data-product_handle="regular" data-has_image="true" data-display_size="compact" data-redirect_to="modal" data-buy_button_text="Add to cart" data-buy_button_out_of_stock_text="Out of Stock" data-buy_button_product_unavailable_text="Unavailable" data-button_background_color="7fb466" data-button_text_color="ffffff" data-product_modal="true" data-product_title_color="000000" data-next_page_button_text="Next page"></div>
-									<script type="text/javascript">
-										document.getElementById('ShopifyEmbedScript') || document.write('<script type="text/javascript" src="https://widgets.shopifyapps.com/assets/widgets/embed/client.js" id="ShopifyEmbedScript"><\/script>');
-									</script>
-									<noscript><a href="https://the-wash-collective.myshopify.com/cart/26430761160:1" target="_blank">Buy Regular</a></noscript>
-								</a>
-							</div>
 							<div id="product-starterkit" class="col-md-3-2 to-animate products-item">
 								<a href="#" class="fh5co-figure">
-									<span class="fh5co-price">$35<span>/a single kit</span></span>
-									<h3 class="fh5co-figure-lead">Starter</h3>
-									<p class="fh5co-figure-text">For the skeptic, first-timer. Serves as a great gift!</p>
+									<span class="fh5co-price">$35<span>/month</span></span>
+									<h3 class="fh5co-figure-lead">Starter Kit</h3>
+									<p class="fh5co-figure-text">For the skeptic, first-timer. Enjoy a cosmetic bag filled to the brim with goodies. Serves as a great gift!</p>
 									<div data-embed_type="product" data-shop="the-wash-collective.myshopify.com" data-product_name="Starter Kit" data-product_handle="starter-kit" data-has_image="true" data-display_size="compact" data-redirect_to="modal" data-buy_button_text="Add to cart" data-buy_button_out_of_stock_text="Out of Stock" data-buy_button_product_unavailable_text="Unavailable" data-button_background_color="7fb466" data-button_text_color="ffffff" data-product_modal="true" data-product_title_color="000000" data-next_page_button_text="Next page"></div>
 									<script type="text/javascript">
 										document.getElementById('ShopifyEmbedScript') || document.write('<script type="text/javascript" src="https://widgets.shopifyapps.com/assets/widgets/embed/client.js" id="ShopifyEmbedScript"><\/script>');
 									</script>
 									<noscript><a href="https://the-wash-collective.myshopify.com/cart/25852005960:1" target="_blank">Buy Starter Kit</a></noscript>
+									<p class="fh5co-figure-text">** After your first month, you will no longer receive a cosmetic bag, but only a monthly restock of facial & body wipes.**</p>
+								</a>
+							</div>
+							<div id="product-regularkit" class="col-md-3-2 to-animate products-item">
+								<a href="#" class="fh5co-figure">
+									<span class="fh5co-price">$40<span>/month</span></span>
+									<h3 class="fh5co-figure-lead">Restock</h3>
+									<p class="fh5co-figure-text">For the avid exerciser. Get a restock on body & facial wipes shipped to you TWICE, every month. That's 30 body & facial wipes delivered straight to you each month people.</p>
+									<div data-embed_type="product" data-shop="the-wash-collective.myshopify.com" data-product_name="Regular" data-product_handle="regular" data-has_image="true" data-display_size="compact" data-redirect_to="modal" data-buy_button_text="Add to cart" data-buy_button_out_of_stock_text="Out of Stock" data-buy_button_product_unavailable_text="Unavailable" data-button_background_color="7fb466" data-button_text_color="ffffff" data-product_modal="true" data-product_title_color="000000" data-next_page_button_text="Next page"></div>
+									<script type="text/javascript">
+										document.getElementById('ShopifyEmbedScript') || document.write('<script type="text/javascript" src="https://widgets.shopifyapps.com/assets/widgets/embed/client.js" id="ShopifyEmbedScript"><\/script>');
+									</script>
+									<noscript><a href="https://the-wash-collective.myshopify.com/cart/26430761160:1" target="_blank">Buy Regular</a></noscript>
 								</a>
 							</div>
 							<div class="col-md-3-2 to-animate">
@@ -545,7 +546,7 @@
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter"></i></a>
 								<a href="#"><i class="icon-facebook"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://www.instagram.com/thewashcollective/"><i class="icon-instagram"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
 						</div>
